--- a/HTML_CSS/WebDesign/PyWebDev/style.css
+++ b/HTML_CSS/WebDesign/PyWebDev/style.css
@@ -642,7 +642,7 @@ a {
   background-color: #132a3d;
 }
 .membership-card {
-  background-color: #f1f3f6;
+  background-color: #eefbff;
   color: #222;
   padding: 3.2rem 3.2rem 3.2rem 3.2rem;
   border-radius: 8px;
@@ -711,7 +711,13 @@ a {
 .membership-card--pro {
   position: relative;
   background: none;
-  background-color: #fff7d6;
+  background-color: #eefbff;
+
+  /* 
+  #00AFB6
+  #26CEA2
+  #97E785
+  */
 }
 .membership-card--pro::after {
   font-family: "Permanent Marker", "Inter", sans-serif;
@@ -741,4 +747,49 @@ a {
 }
 .feature-icon {
   font-size: 3.6rem;
+}
+
+/* ******************************************* */
+/* CTA */
+/* ******************************************* */
+
+.section-cta {
+  padding: 9.6rem 0;
+}
+
+.cta--container {
+  display: grid;
+  grid-template-columns: 0.6fr 0.4fr;
+  background-color: #eefbff;
+  box-shadow: 0 2rem 3rem 0 rgb(0 0 0 / 12%);
+  border-radius: 8px;
+  height: 50rem;
+  overflow: hidden;
+}
+
+.cta-text-box {
+  padding: 2.4rem 2.4rem 4.8rem 4.8rem;
+  color: #132a3d;
+}
+
+.cta-text-box .step-heading {
+  font-size: 2.8rem;
+  margin-bottom: 4.8rem;
+  font-weight: 700;
+}
+.cta-text-box .step-description {
+  font-size: 1.8rem;
+  margin-bottom: 6.2rem;
+}
+
+.cta-image-box {
+  background-image: url("../images/dark-code.png");
+  background-size: cover;
+}
+
+.cta-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 3.2rem;
+  row-gap: 2.4rem;
 }
