--- a/HTML_CSS/WebDesign/PyWebDev/style.css
+++ b/HTML_CSS/WebDesign/PyWebDev/style.css
@@ -91,9 +91,8 @@ a {
 }
 
 .grid--5-columns {
-  grid-template-columns: repeat(5, 1fr);
-  column-gap: 3.2rem;
-  justify-items: end;
+  grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
+  column-gap: 4.8rem;
 }
 
 .grid--center-v {
@@ -860,8 +859,9 @@ footer {
   color: #ffc053;
 }
 .footer-sub-heading {
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   font-weight: 600;
+  margin-bottom: 0.6rem;
 }
 
 .footer-col-1 {
@@ -872,9 +872,22 @@ footer {
 
 .footer-options li {
   font-size: 1.2rem;
-  margin-bottom: 0.8rem;
+  margin-bottom: 1.2rem;
 }
 
 .footer-options li:last-child {
   margin-bottom: 0;
 }
+
+.footer-social-links li {
+  margin-bottom: 0.8rem;
+  font-size: 1.2rem;
+}
+
+.footer-social-icon {
+  font-size: 1.4rem;
+  margin-right: 0.4rem;
+}
+/* 
+We can use margin-bottom: auto with flex box to send the bottom content to the correct spot. 
+*/
