--- a/HTML_CSS/WebDesign/PyWebDev/style.css
+++ b/HTML_CSS/WebDesign/PyWebDev/style.css
@@ -37,15 +37,18 @@ LIGHT YELLOW: #ffd60a
 
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
   font-family: "Oxygen", sans-serif;
   line-height: 1.6;
   letter-spacing: 1px;
-  background-color: rgb(34, 39, 49);
+  background-color: #222731;
   color: #ffffff;
+  overflow-x: hidden;
 }
+
 ul {
   list-style: none;
 }
@@ -160,6 +163,24 @@ a {
   padding: 0.4rem 0.8rem;
 }
 
+.button-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+  /* By default, the button should not be visible; only until screen size reached a certain point. */
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.4rem;
+  width: 4.4rem;
+  color: #ffffff;
+}
+
+.icon-mobile-nav[name="close"] {
+  display: none;
+}
+
 /* ******************************************* */
 /* HEADER SECTION */
 /* ******************************************* */
@@ -174,6 +195,7 @@ a {
   /* FOR STICKY HEADER */
   height: 9.6rem;
   padding: 1.4rem;
+  position: relative;
 }
 
 /* ******************************************* */
@@ -189,7 +211,7 @@ a {
 .nav-div ul {
   display: flex;
   align-items: center;
-  gap: 9.6rem;
+  gap: 4.8rem;
 }
 
 .nav-element {
