--- a/Flask/FlaskMarket/app/templates/base.html
+++ b/Flask/FlaskMarket/app/templates/base.html
@@ -14,6 +14,8 @@
          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
          crossorigin="anonymous"
          />
+         {# Phosphor icons #}
+      <script src="https://unpkg.com/@phosphor-icons/web"></script>
       <title>{% block title %} {% endblock %}</title>
    </head>
    <body>
@@ -39,16 +41,49 @@
                   <a class="nav-link" href="{{ url_for('market.market_page') }}">Market</a>
                </li>
             </ul>
+         {# current_user is accessible via the flask_login package #}
+         {% if current_user.is_authenticated %}
             <ul class="navbar-nav">
                <li class="nav-item">
-                  <a class="nav-link" href="#">Login</a>
+                  <a class="nav-link" style="color: lawngreen; font-weight: bold">
+                     <i class="ph ph-coins"></i>
+                     <i>{{ current_user.prettier_budget }}</i>
+                  </a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link">Welcome, {{ current_user.username }}</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('logout.logout_page') }}">Logout</a>
+               </li>
+            </ul>
+
+         {% else %}
+
+            <ul class="navbar-nav">
+               <li class="nav-item">
+                  <a class="nav-link" href="{{ url_for('login.login_page') }}">Login</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link" href="{{ url_for('register.register_page') }}">Register</a>
                </li>
             </ul>
+
+         {% endif %}
          </div>
       </nav>
+      {% with messages = get_flashed_messages(with_categories=true) %}
+         {% if messages %}
+            {% for category, message in messages %}
+               <div class="alert alert-{{ category }}">
+                  <button type="button" class="m1-2 mb-1 close" data-dismiss="alert" aria-label="Close">
+                     <span aria-hidden="true">&times;</span>
+                  </button>
+                  {{ message }}
+               </div>
+            {% endfor %}
+         {% endif %}
+      {% endwith %}
       {% block content %} {% endblock %}
       <!-- Future Content here -->
       <!-- Optional JavaScript -->
