--- a/Flask/FlaskMarket/app/templates/market.html
+++ b/Flask/FlaskMarket/app/templates/market.html
@@ -4,31 +4,44 @@ Market Page
 {% endblock %}
 {% block content %}
 <h1>Market Page</h1>
-<table class="table table-hover table-dark">
-   <thead>
-      <tr>
-         <!-- Your Columns HERE -->
-         <th scope="col">ID</th>
-         <th scope="col">Name</th>
-         <th scope="col">Barcode</th>
-         <th scope="col">Price</th>
-         <th scope="col">Options</th>
-      </tr>
-   </thead>
-   <tbody>
-      <!-- Your rows inside the table HERE: -->
-      {% for item in items %}
-      <tr>
-         <td>{{ item.id }}</td>
-         <td>{{ item.name }}</td>
-         <td>{{ item.barcode }}</td>
-         <td>${{ item.price }}</td>
-         <td>
-            <button class="btn btn-outline btn-info">More Info</button>
-            <button class="btn btn-outline btn-success">Purchase this Item</button>
-         </td>
-      </tr>
-      {% endfor %}
-   </tbody>
-</table>
+<div class="row" style="margin-top:20px; margin-left:20px">
+   <div class="col-8">
+      <h2>Available Items</h2>
+      <p>Click on an Item to start purchasing.</p>
+      <table class="table table-hover table-dark">
+         <thead>
+            <tr>
+               <!-- Your Columns HERE -->
+               <th scope="col">ID</th>
+               <th scope="col">Name</th>
+               <th scope="col">Barcode</th>
+               <th scope="col">Price</th>
+               <th scope="col">Options</th>
+            </tr>
+         </thead>
+         <tbody>
+            <!-- Your rows inside the table HERE: -->
+            {% for item in items %}
+
+            {% include 'includes/items_modals.html' %}
+            <tr>
+               <td>{{ item.id }}</td>
+               <td>{{ item.name }}</td>
+               <td>{{ item.barcode }}</td>
+               <td>${{ item.price }}</td>
+               <td>
+                  {# The data-target is what defined what modal window to run and it's how we dynamically change each Modal window #}
+                  <button class="btn btn-outline btn-info" data-toggle="modal" data-target="#Modal-MoreInfo-{{ item.id }}">More Info</button>
+                  <button class="btn btn-outline btn-success" data-toggle="modal" data-target="#Modal-PurchaseConfirm-{{ item.id }}">Purchase this Item</button>
+               </td>
+            </tr>
+            {% endfor %}
+         </tbody>
+      </table>
+   </div>
+   <div class="col-4">
+      <h2>Owned Items</h2>
+      <p>Click on an Itemt to sell back to the Market.</p>
+   </div>
+</div>
 {% endblock %}
