add Flask Market app documentation

--- a/Flask/FlaskMarket/app/templates/base.html
+++ b/Flask/FlaskMarket/app/templates/base.html
@@ -72,6 +72,7 @@
          {% endif %}
          </div>
       </nav>
+      <!-- All flashed messages are displayed to the user here -->
       {% with messages = get_flashed_messages(with_categories=true) %}
          {% if messages %}
             {% for category, message in messages %}
