--- a/Flask/FlaskMarket/app/templates/base.html
+++ b/Flask/FlaskMarket/app/templates/base.html
@@ -47,6 +47,7 @@
                <li class="nav-item">
                   <a class="nav-link" style="color: lawngreen; font-weight: bold">
                      <i class="ph ph-coins"></i>
+                     <!-- prettier_budget comes from our Models/user -->
                      <i>{{ current_user.prettier_budget }}</i>
                   </a>
                </li>
